<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imv_logo"
        android:layout_width="140dp"
        android:layout_height="149dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/logo" />

    <TextView
        android:id="@+id/txt_about"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_bigbig"
        android:layout_below="@id/imv_logo"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_below="@id/txt_about"
        android:layout_marginLeft="@dimen/edt_magin_left"
        android:layout_marginRight="@dimen/edt_magin_right"
        android:layout_marginTop="@dimen/edt_magin_top"
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:padding="@dimen/text_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/round_border"
        android:hint="@string/hint_phone"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_below="@id/edt_email"
        android:layout_marginLeft="@dimen/edt_magin_left"
        android:layout_marginRight="@dimen/edt_magin_right"
        android:layout_marginTop="@dimen/edt_magin_top"
        android:layout_marginBottom="@dimen/edt_magin_bottom"
        android:padding="@dimen/text_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/round_border"
        android:hint="@string/hint_pass"/>



    <Button
        android:id="@+id/btn_sign_in"
        android:layout_below="@id/edt_pass"
        android:layout_marginLeft="@dimen/edt_magin_left"
        android:layout_marginRight="@dimen/edt_magin_right"
        android:layout_marginTop="@dimen/edt_magin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_btn"
        android:textColor="@color/white"
        android:text="@string/text_sign_in"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/text_padding"

        android:text="@string/text_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <Button
        android:id="@+id/btn_exit_app"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_sign_up"
        android:background="@color/app_color"
        android:text="x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:layout_alignParentRight="true" />


</RelativeLayout>